tests for pandemic radar card